--- a/products.html
+++ b/products.html
@@ -18,7 +18,7 @@
         <nav class="nav-top">
             <ul>
                 <li><a href="about.html">About</a></li>
-                <li><a href="products.html">Products</a></li>
+                <li><a href="products.html" class="selected">Products</a></li>
             </ul>
         </nav>
     </header>
