--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
         
         <nav class="nav-top">
             <ul>
-                <li><a href="about.html">About</a></li>
+                <li><a href="about.html" class="selected">About</a></li>
                 <li><a href="products.html">Products</a></li>
             </ul>
         </nav>
