Buckets added, Billboard margin corrected

--- a/products.html
+++ b/products.html
@@ -23,7 +23,7 @@
         </nav>
     </header>
     
-    <div class="productbillboard">
+    <div class="billboard product">
         <h1>Things to Buy</h1>
     </div>
 
@@ -36,13 +36,13 @@
         <hr>
         
         <h2>Catch Our New Spring Line</h2>
-         <ul class="bucket3">
-            <li><a class="first"></a></li>
-            <li><a class="second"></a></li>
-            <li><a class="third"></a></li>
-            <li><a class="fourth"></a></li>
-            <li><a class="fifth"></a></li>
-            <li><a class="sixith"></a></li>
+         <ul class="bucket2">
+            <li><a href="images/bordeleau-2.jpg" class="first"></a>Pants</li>
+            <li><a href="images/bordeleau-3.jpg" class="second"></a>Cable Knit </li>
+            <li><a href="images/bordeleau-4.jpg" class="third"></a>Sweater</li>
+            <li><a href="images/bordeleau-5.jpg" class="fourth"></a>Patteren Top</li>
+            <li><a href="images/bordeleau-6.jpg" class="fifth"></a>Spring Tank</li>
+            <li><a href="images/bordeleau-7.jpg" class="sixith"></a>Flowered Skirt</li>
         </ul>
 
 
