--- a/products.html
+++ b/products.html
@@ -40,7 +40,7 @@
             <li><a href="images/bordeleau-2.jpg" class="first"></a>Pants</li>
             <li><a href="images/bordeleau-3.jpg" class="second"></a>Cable Knit </li>
             <li><a href="images/bordeleau-4.jpg" class="third"></a>Sweater</li>
-            <li><a href="images/bordeleau-5.jpg" class="fourth"></a>Patteren Top</li>
+            <li><a href="images/bordeleau-5.jpg" class="fourth"></a>Pattern  Top</li>
             <li><a href="images/bordeleau-6.jpg" class="fifth"></a>Spring Tank</li>
             <li><a href="images/bordeleau-7.jpg" class="sixith"></a>Flowered Skirt</li>
         </ul>
