--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
         </nav>
     </header>
     
-    <div class="aboutbillboard">
+    <div class="billboard about">
         <h1>About Us</h1>
     </div>
 
